application.yaml から環境変数を取得するように変更