@@ -35,5 +35,4 @@ application {
 
 tasks.test {
     useJUnitPlatform()
-    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
